# open-get-fonts

./: Cargo.toml  README.md  USAGE.md  package-lock.json  package.json
crates/open-get-fonts/: Cargo.toml
crates/open-get-fonts/src/: lib.rs  linux.rs  macos.rs  windows.rs
docs/: FONTCONFIG.md  README.md
src/: load.cts
